--- a/final_code/css/style.css
+++ b/final_code/css/style.css
@@ -20,7 +20,7 @@ Style guidelines for this project:
         - Accent 2: #0a2647
         - White: #ffffff
 3. Shadow 
-    -> Box shadow: 0 0 10px rgba(0, 0, 0, 0.2)
+    -> box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 4. Border radius
     -> 1.2rem
 5. Spacing
@@ -65,9 +65,15 @@ body {
   background-color: #0a2647;
 }
 
+:focus {
+  outline: none;
+  box-shadow: 0 0 0 2px #2c74b3;
+}
+
 a {
   text-decoration: none;
   color: #2c74b3;
+  transition: color 0.3s ease-in-out;
 }
 
 a:hover {
@@ -97,13 +103,17 @@ a:disabled {
 
 .social-media__link {
   display: flex;
+  position: relative;
+  top: 0;
   justify-content: center;
   align-items: center;
   border-radius: 50%;
   padding: 1rem;
   background-color: #0a2647;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   width: 5rem;
   height: 5rem;
+  transition: top 0.3s ease-in-out, background-color 0.3s ease-in-out;
 }
 
 .social-media__image {
@@ -113,22 +123,32 @@ a:disabled {
 }
 
 .social-media__link:hover {
+  top: -1rem;
   background-color: #2c74b3;
 }
 
 .button {
+  position: relative;
   padding: 1rem 2rem;
   border: 1px solid #2c74b3;
   border-radius: 12px;
   background-color: #2c74b3;
+  transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
   color: #ffffff;
   font-size: 1.6rem;
   cursor: pointer;
+  border: none;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 .button:hover {
   background-color: #205295;
   color: #ffffff;
+}
+
+button:focus {
+  outline: none;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px, 0 0 0 2px #2c74b3;
 }
 
 .heading {
@@ -254,10 +274,6 @@ a:disabled {
 /* Hero section */
 /***********/
 
-.hero {
-  margin-top: 9rem;
-}
-
 .hero__content-header {
   font-size: 4.6rem;
 }
@@ -290,6 +306,7 @@ a:disabled {
   border-radius: 12px;
   border: 2px solid #2c74b3;
   object-fit: cover;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 .hero__content-p {
@@ -308,7 +325,6 @@ a:disabled {
 .about__container {
   display: flex;
   max-width: 144rem;
-
   margin: 0 auto;
   flex-wrap: wrap;
   flex-direction: row;
@@ -351,7 +367,7 @@ a:disabled {
 }
 
 .about .social-media {
-  margin-left: 3rem;
+  margin-left: 2rem;
 }
 
 /***********/
@@ -380,6 +396,8 @@ a:disabled {
   flex-grow: 0;
   position: relative;
   cursor: pointer;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  transition: transform 0.3s ease-in-out;
 }
 
 .projects__project h3 {
@@ -396,6 +414,10 @@ a:disabled {
 .projects__project img {
   width: 100%;
   object-fit: cover;
+}
+
+.projects__project:hover {
+  transform: scale(1.1);
 }
 
 /***********/
@@ -423,17 +445,20 @@ a:disabled {
 
 .skills__element {
   display: flex;
+  position: relative;
   justify-content: center;
   align-items: center;
   border-radius: 50%;
-  padding: 1.6rem;
+  padding: 1.5rem;
   background-color: #0a2647;
   width: 15rem;
   height: 15rem;
+  transition: all 0.3s ease-in-out;
 }
 
 .skills__element:hover {
   background-color: #2c74b3;
+  transform: scale(1.1);
 }
 .skills__element img {
   width: 70%;
@@ -492,6 +517,7 @@ textarea {
   padding: 6rem 8rem;
   background-color: #144272;
   border-radius: 12px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 .contact__details .social-media {
