--- a/final_code/css/style.css
+++ b/final_code/css/style.css
@@ -495,6 +495,10 @@ button:focus {
   width: 100%;
 }
 
+.contact__form label {
+  width: 100%;
+}
+
 .contact__form input,
 textarea {
   width: 100%;
