--- a/final_code/css/style.css
+++ b/final_code/css/style.css
@@ -308,6 +308,7 @@ button:focus {
 }
 
 .hero__image img {
+  width: 100%;
   border-radius: 12px;
   border: 2px solid #2c74b3;
   object-fit: cover;
